Version 1.6.0
-------------

New features:

 * finfo command for batch remote filesystem operations
 * fcat command to print remote files
 * fget and fput for efficient and robust file transfer
   - Use fallocate, fsync, and atomic rename to transfer files
     quickly and safely; take advantage of general fb-adb compression
     and transport options
 * Automatically-generated bash completion specifications
   Just use `eval "$(fb-adb bash-completion)"' to keep up-to-date
 * Completion of device files from host
 * Unify man page and internal documentation; in-program doc improvements
 * "help" is now a regular command
 * All commands that talk to devices now support the same user, transport,
   and device-selection arguments that shell and rcmd do

Bug fixes:

 * Try harder to avoid O_NONBLOCK-on-the-tty side effects even
   when we can't create a new open file description for the tty:
   reset on exit and on SIGTSTP.
 * Attempt to work around SELinux failures on pre-KK devices
 * Work around mv(1) behavior change in API 23's mv(1) (or at least
   the preview's version of mv)
 * The "timestamp" embedded in the fb-adb stub is now a function of the
   built binary, not the actual build time.  As a result, the build is
   now deterministic.

Incompatible changes:

 * Removed -U option for rcmd and shell commands

Version 1.5.1
-------------

New features:

 * --user and --root options for logw and readlink.

Bug fixes:

 * Properly report errors executing run-as and su.

Version 1.5.0
-------------

New features:

 * readlink command.  Useful on older devices without a readlink(1).

Version 1.4.4
-------------

Bug fixes:

  * Make SIGINT and other signals work for delegated adb tasks.

Version 1.4.3
-------------

Bug fixes:

  * Fix kqueue-based ppoll emulation on OS X to work correctly with
    regular disk files.

Version 1.4.2
-------------

Bug fixes:

 * Abstract unix socket creation function should fail on OS X

Version 1.4.1
-------------

New features:
