@@ -3,6 +3,8 @@ Version 1.6.0
 
 New features:
 
+ * getprop command for zero, more, or all properties; outputs JSON or
+   uses user-specified format strings
  * finfo command for batch remote filesystem operations
  * fcat command to print remote files
  * fget and fput for efficient and robust file transfer
